Warning fix: "Replace fill-available to stretch"

--- a/src/react-pure-modal.css
+++ b/src/react-pure-modal.css
@@ -44,9 +44,7 @@
 }
 .pure-modal-backdrop:not(.scrollable) .panel {
   grid-template-rows: min-content minmax(0, 1fr) min-content;
-  max-height: -moz-available;
-  max-height: -webkit-fill-available;
-  max-height: fill-available;
+  position: relative;
   height: 100%;
 }
 
